Cycles: Curve object evaluated mesh does not update #92864

Closed
opened 2021-11-05 19:23:58 +01:00 by Hans Goudey · 7 comments
Member

System Information
Operating system: Linux-5.14.13-200.fc34.x86_64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.74

Blender Version
Most likely caused by 1bc655c5aa

Short description of error
Curve object evaluated mesh does not always update.

Exact steps for others to reproduce the error

  • Toggle "Fill Caps"
  • Watch as the curve object usually doesn't update, but the mesh object does.

cycles-curve-sync-2.mp4

#92864.blend

**System Information** Operating system: Linux-5.14.13-200.fc34.x86_64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.74 **Blender Version** Most likely caused by 1bc655c5aa **Short description of error** Curve object evaluated mesh does not always update. **Exact steps for others to reproduce the error** - Toggle "Fill Caps" - Watch as the curve object usually doesn't update, but the mesh object does. [cycles-curve-sync-2.mp4](https://archive.blender.org/developer/F11735247/cycles-curve-sync-2.mp4) [#92864.blend](https://archive.blender.org/developer/F11735212/T92864.blend)
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscribers: @JacquesLucke, @brecht

Added subscribers: @JacquesLucke, @brecht
Author
Member

Here's a small diff that fixes this issue. However, it's definitely not correct:

diff --git a/intern/cycles/blender/geometry.cpp b/intern/cycles/blender/geometry.cpp
index 479e76f68bc..846fbb472da 100644
--- a/intern/cycles/blender/geometry.cpp
+++ b/intern/cycles/blender/geometry.cpp
@@ -139,9 +139,10 @@ Geometry *BlenderSync::sync_geometry(BL::Depsgraph &b_depsgraph,
         }
       }
 
-      if (!attribute_recalc) {
-        return geom;
-      }
+      // if (!attribute_recalc) {
+      //   std::cout << "  Returning because of no attribute recalc\n";
+      //   return geom;
+      // }
     }
   }

The problem is that shaders seem to be tagged that they don't need recalculations of attributes, but only for the curve object.
My inexperience with Cycles code is making it hard to understand the bigger picture though.

Here's a small diff that fixes this issue. However, it's definitely not correct: ``` diff --git a/intern/cycles/blender/geometry.cpp b/intern/cycles/blender/geometry.cpp index 479e76f68bc..846fbb472da 100644 --- a/intern/cycles/blender/geometry.cpp +++ b/intern/cycles/blender/geometry.cpp @@ -139,9 +139,10 @@ Geometry *BlenderSync::sync_geometry(BL::Depsgraph &b_depsgraph, } } - if (!attribute_recalc) { - return geom; - } + // if (!attribute_recalc) { + // std::cout << " Returning because of no attribute recalc\n"; + // return geom; + // } } } ``` The problem is that shaders seem to be tagged that they don't need recalculations of attributes, but only for the curve object. My inexperience with Cycles code is making it hard to understand the bigger picture though.
Jacques Lucke self-assigned this 2021-11-06 16:44:47 +01:00

Added subscriber: @Baardaap

Added subscriber: @Baardaap

This issue was referenced by 47b8baa5c4

This issue was referenced by 47b8baa5c4e5b713d33e3925df9d55b882ae2a27
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:58:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92864
No description provided.